# DRL-Assignment-2

./: .gitignore  Approximator.py  Game2048Env.py  UCTMCTS.py  agent.py  connect6.py  count_weights.py  create_dummy_weights.py  eval.py  game_env.py  ludii.trl  ludii_preferences.json  mcts_node.py  mcts_search.py  meta.xml  n_tuple_network.py  pyproject.toml  requirements.txt  run_game.py  student_agent.py  td_learner.py  test_mcts_agent.py  train.py  train_2stage.py  train_ms_td.py  train_n_tuple.py  training.out
.github/workflows/: main.yml
connect6/: Rule-Based.py
