[project]
name = "drl-assignment-2"
version = "0.1.0"
description = ""
authors = [
    {name = "enip",email = "enip2473@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (==1.26)",
    "gym (>=0.26.2,<0.27.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
